[package]
name = "battle"
version = "0.1.0"
authors = ["KSean222 <44050761+KSean222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minotetris = { path = "../minotetris" }
minobot = { path = "../minobot" }
rand = "0.7.0"
enumset = "1.0"
