[package]
name = "gui"
version = "0.1.0"
authors = ["KSean222 <44050761+KSean222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minotetris = { path = "../minotetris" }
minobot = { path = "../minobot" }
ggez = "0.5.1"
enumset = "0.4.0"
rand = "0.7.0"
rand_pcg = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"