[package]
name = "minobot"
version = "0.1.0"
authors = ["KSean222 <44050761+KSean222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minotetris = { path = "../minotetris" }
enumset = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
serde_json = "1.0"
