[package]
name = "minotetris"
version = "0.1.0"
authors = ["KSean222 <44050761+KSean222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
enumset = "0.4.0"
arrayvec = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.2.0"
